<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/defeat_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/defeat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/defeat_background"
        />
    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/defeat_background"
        app:layout_constraintStart_toStartOf="@id/defeat_background"
        app:layout_constraintEnd_toEndOf="@id/defeat_background"
        android:layout_marginTop="20dp"
        android:text="@string/game_over"
        android:textSize="60sp"
        android:fontFamily="sans-serif-black"
        />
    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_over_text"
        app:layout_constraintStart_toStartOf="@id/game_over_text"
        app:layout_constraintEnd_toEndOf="@id/game_over_text"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        />
    <Button
        android:id="@+id/try_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="@id/game_over_text"
        app:layout_constraintEnd_toEndOf="@id/game_over_text"
        android:text="@string/try_again"
        android:textSize="20sp"
        android:backgroundTint="@color/tty_again_button_color"
        />
</androidx.constraintlayout.widget.ConstraintLayout>